Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21208

mysql_tzinfo_to_sql does not work in strict mode

    XMLWordPrintable

Details

    Description

      When the sql-mode contains STRICT_ALL_TABLES or STRICT_TRANS_TABLES mysql_tzinfo_to_sql is not properly working because of the following statement

      ALTER TABLE time_zone_transition ORDER BY Time_zone_id, Transition_time;
      

      with the following error message
      ERROR 1105 (HY000) at line 146984: ORDER BY ignored as there is a user-defined clustered index in the table 'time_zone_transition'

      This could be releated to MDEV-18778 (but I am not quite sure)

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              kstiehl Kevin Stiehl
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.