MDEV-21208: mysql_tzinfo_to_sql does not work in strict mode

Remove Warning that occured by doing an ALTER TABLE ... ORDER
BY on an InnoDB table.

Reviewed by Brandon Nesterenko